[css-anchor-position-1] Changed anchor names doesn't re-run anchor resolution on anchor-positioned elements rdar://150975368 https://bugs.webkit.org/show_bug.cgi?id=292754

Reviewed by Alan Baradlay.

Consider this pseudo-HTML:

<div anchor-name: --a /> // A
<div position-anchor: --a position-area: top left> // B
  <div anchor-name: --c ></div> // C
</div>

<div position-anchor: --c position-area: top right /> // D

On the first style resolution pass:

* A is an anchor named --a
* B is anchor-positioned to --a. There's an optimization where we skip descending
  into an anchor-positioned element until it's resolved, so we don't descend into B.
  This means C is not discovered as an anchor.
* D is anchor-positioned to --c.

After the first style resolution pass:

* B is resolved, such that --a refers to A
* D is anchored to --c, but there're no anchors named --c (NOTE that C hasn't
  been discovered yet, since we skip visiting C until B is resolved). So D
  is resolved as "anchor --c not found"

On the second style resolution pass, we descend into B (since B is resolved),
and discover C as an anchor named --c.

After the second style resolution pass, B and D don't get re-resolved because
they're marked as "resolved". This is wrong, because D should be re-resolved
to pick up C as potential anchor for name --c. The result is that D won't
anchor to C, even though it should.

The fix is to mark anchor-positioned elements as unresolved when an anchor name
it refers to changes. This signals that anchor resolution should be run again
to pick up the new changes.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-in-anchor-positioned-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-in-anchor-positioned.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-in-popover-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-in-popover.html: Added.
* Source/WebCore/style/AnchorPositionEvaluator.cpp:
(WebCore::Style::AnchorPositionEvaluator::updateAnchorPositioningStatesAfterInterleavedLayout):
(WebCore::Style::AnchorPositionEvaluator::makeAnchorPositionedForAnchorMap):
(WebCore::Style::AnchorPositionEvaluator::defaultAnchorForBox):
* Source/WebCore/style/AnchorPositionEvaluator.h:
* Source/WebCore/style/StyleScope.cpp:
(WebCore::Style::Scope::updateAnchorPositioningStateAfterStyleResolution):
* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::resolve):
    - When invalidating anchor-positioned element because of anchor name changes,
      only invalidate it once.
    - In addition to invalidating anchor-positioned elements, also reset its stage
      in AnchorPositionState to FindAnchor.

Canonical link: https://commits.webkit.org/297797@main